WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
192837
REGRESSION(
r239134
) iOS safe browsing warning unable to show details
https://bugs.webkit.org/show_bug.cgi?id=192837
Summary
REGRESSION(r239134) iOS safe browsing warning unable to show details
Alex Christensen
Reported
2018-12-18 16:03:26 PST
REGRESSION(
r239134
) iOS safe browsing warning unable to show details
Attachments
Patch
(1.29 KB, patch)
2018-12-18 16:04 PST
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(3.64 KB, patch)
2018-12-18 17:15 PST
,
Alex Christensen
thorton
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2018-12-18 16:04:29 PST
Created
attachment 357628
[details]
Patch
Tim Horton
Comment 2
2018-12-18 16:27:13 PST
Comment on
attachment 357628
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=357628&action=review
> Source/WebKit/ChangeLog:10 > + I added a call to updateContentSize in
r239134
which was necessary on watchOS but it makes iOS unable to show the details.
Why?!?!
Alex Christensen
Comment 3
2018-12-18 16:28:50 PST
It was necessary on the watch because the content is bigger than a watch screen and you need to scroll down to see or do anything. I don't know why setting the size on the watch twice works fine but on iOS it does not.
Tim Horton
Comment 4
2018-12-18 16:35:05 PST
Seems like it would be good to know that? Especially since it's just "do a layout and set contentSize" which should certainly not break things?
Alex Christensen
Comment 5
2018-12-18 17:15:35 PST
Created
attachment 357637
[details]
Patch
Alex Christensen
Comment 6
2018-12-18 21:01:18 PST
http://trac.webkit.org/r239367
Radar WebKit Bug Importer
Comment 7
2018-12-18 21:03:08 PST
<
rdar://problem/46830755
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug